Various bugfixing for filtering, extended links in layout columns and bounding box visibility.

--- a/refinery/ui/src/styles/css/provenance-visualization.css
+++ b/refinery/ui/src/styles/css/provenance-visualization.css
@@ -170,6 +170,7 @@
     stroke-width: 1.0px;
     stroke-opacity: 1.0;
     fill: none;
+    display: none;
 }
 
 .aLink, .lLink {
